# Agentic_devops_pipeline

./: .env.example  .gitignore  README.md  TERMINAL_STREAMING_INTEGRATION.md  package-lock.json  req.md  requirements.txt  run_server.py  test_terminal_streaming_integration.py  test_websocket.html
.github/instructions/: git-copilot-instructuions.instructions.md
MCP/: .exmple.env  hackademia_Graph_MCP.py  hackademia_mcp_client.py  usage_examples.py
MCP/mcp-code-graph/: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  CONTRIBUTING.md  LICENCE  README.md  SECURITY.md  debug-mcp.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/: README.md  masterplan.md  phase1_complete.md  phase1_completion.md  phase1_extended_completion.md  phase2a_websocket_completion.md  phase2b_autofix_completion.md  pipeline_results_webhook_system.md  terminal_websocket_system.md  websocket_complete_protocol.md
frontend/: README.md  index.html  websocket-test-server.cjs
frontend/public/: websocket-test.html
sample project/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_api.py  setup.py  validate_project.py
sample project/src/: config.py  database.py  main.py  models.py
sample project/tests/: test_main.py
src/: __init__.py  main.py  pipeline_results_mysteryisfun_test_35_1756012915_20250824_105621.json
tests/: sample_pipeline_results.json  test_ai_vulnerability_detection.py  test_analysis_websocket_protocol.py  test_api_components.py  test_autonomous_mcp.py  test_build_agent.py  test_code_for_pr.py  test_complete_autonomous.py  test_complete_pipeline.py  test_complete_pipeline_real.py  test_complete_pipeline_with_fix.py  test_comprehensive_results_webhook.py  test_comprehensive_websocket.py  test_end_to_end.py  test_enhanced_autonomous.py  test_fix_agent.py  test_fix_agent_apply_real_fix.py  test_fix_debug.py  test_fix_real.py  test_fix_realistic.py  test_fix_simple.py  test_fix_thresholds.py  test_frontend_websocket.py  test_gemini_api_connection.py  test_gemini_connection.py  test_gemini_langchain.py  test_github_connection.py  test_integration_webhook_system.py  test_json_efficiency.py  test_json_improvements.py  test_live_websocket_comms.py  test_local_files.py  test_mock_websocket_comms.py  test_pr_diff_extraction.py  test_pr_file.py  test_progress_callbacks.py  test_real_pipeline_frontend.py  test_real_webhook.py  test_recursion_prevention.py  test_simplified_autonomous.py  (+6 more)
(+41 files in other folders)
