[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-api-cicd"
version = "1.0.0"
description = "A complete FastAPI sample application for testing CI/CD pipelines"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DevOps Team", email = "devops@example.com"}
]
maintainers = [
    {name = "DevOps Team", email = "devops@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]
keywords = ["fastapi", "api", "rest", "cicd", "pipeline", "testing", "sample"]
requires-python = ">=3.8"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "httpx==0.25.2",
    "requests==2.31.0",
    "sqlalchemy==2.0.23",
    "aiosqlite==0.19.0",
    "structlog==23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-httpx==0.26.0",
    "black==23.11.0",
    "flake8==6.1.0",
]

[project.scripts]
run-sample-api = "src.main:main"

[project.urls]
Documentation = "https://github.com/example/sample-api-cicd"
Repository = "https://github.com/example/sample-api-cicd"
Issues = "https://github.com/example/sample-api-cicd/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]